@@ -1,3 +1,8 @@
+2006-05-12  Bruno Haible  <bruno@clisp.org>
+
+	* mkdtemp.c [MINGW]: Include <io.h>.
+	(mkdir): Define using _mkdir.
+
 2006-05-11  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (libgettextlib_la_SOURCES, libgettextlib_la_LDFLAGS):
